[gd_scene load_steps=7 format=4 uid="uid://b5h7ijeoo64g4"]

[ext_resource type="Texture2D" uid="uid://cl2yx48q2pdki" path="res://assets/tile_maps/The Platformer v1-0 Alpha.png" id="1_n1ahf"]
[ext_resource type="Script" uid="uid://28xhrw4u87sc" path="res://scripts/Maps/boss_room_base.gd" id="1_nfa7k"]
[ext_resource type="Texture2D" uid="uid://c2pd8pewbs7gc" path="res://assets/sprites/cyclops/Cyclops.png" id="3_i70v6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g6433"]
texture = ExtResource("1_n1ahf")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
0:9/0 = 0
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0

[sub_resource type="TileSet" id="TileSet_nfa7k"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_g6433")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nfa7k"]
a = Vector2(25.4828, -16.3882)
b = Vector2(199.347, -24.3308)

[node name="BossRoomBase" type="Node2D" groups=["boss_rooms"]]
script = ExtResource("1_nfa7k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" groups=["maps"]]
offset_right = 1634.0
offset_bottom = 905.0
scale = Vector2(7.63849, 9.51855)
color = Color(0.313726, 0.305882, 0.341176, 1)

[node name="SideDoor" type="TileMapLayer" parent="."]
modulate = Color(0.588235, 0.537255, 0.482353, 1)
position = Vector2(-192, -192)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAkABUAAAACAAkAAAAkABQAAAACAAkAAAAlABQAAAACAAkAAAAlABUAAAACAAkAAAAmABQAAAACAAkAAAAmABUAAAACAAkAAAA=")
tile_set = SubResource("TileSet_nfa7k")

[node name="TopDoor" type="TileMapLayer" parent="."]
modulate = Color(0.588235, 0.537255, 0.482353, 1)
position = Vector2(0, 192)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAATAAEAAAACAAkAAAATAAIAAAACAAkAAAAUAAIAAAACAAkAAAAVAAIAAAACAAkAAAAVAAEAAAACAAkAAAAUAAEAAAACAAkAAAATAAAAAAACAAkAAAAUAAAAAAACAAkAAAAVAAAAAAACAAkAAAA=")
enabled = false
tile_set = SubResource("TileSet_nfa7k")

[node name="Walls" type="TileMapLayer" parent="."]
modulate = Color(0.588235, 0.537255, 0.482353, 1)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAADAAIAAAACAAkAAAACAAIAAAACAAkAAAACAAMAAAACAAkAAAADAAQAAAACAAkAAAACAAQAAAACAAkAAAACAAUAAAACAAkAAAADAAUAAAACAAkAAAADAAYAAAACAAkAAAACAAYAAAACAAkAAAACAAcAAAACAAkAAAADAAcAAAACAAkAAAADAAgAAAACAAkAAAACAAgAAAACAAkAAAACAAkAAAACAAkAAAADAAkAAAACAAkAAAADAAoAAAACAAkAAAACAAoAAAACAAkAAAACAAsAAAACAAkAAAADAAsAAAACAAkAAAADAAwAAAACAAkAAAADAA0AAAACAAkAAAADAA4AAAACAAkAAAADAA8AAAACAAkAAAADABAAAAACAAkAAAADABEAAAACAAkAAAADABIAAAACAAkAAAADABMAAAACAAkAAAADABQAAAACAAkAAAADABUAAAACAAkAAAADABYAAAACAAkAAAADABcAAAACAAkAAAACABcAAAACAAkAAAACABYAAAACAAkAAAACABUAAAACAAkAAAACABQAAAACAAkAAAACABMAAAACAAkAAAACABIAAAACAAkAAAACABEAAAACAAkAAAACABAAAAACAAkAAAACAA8AAAACAAkAAAACAA4AAAACAAkAAAACAA0AAAACAAkAAAACAAwAAAACAAkAAAAEABYAAAACAAkAAAAEABcAAAACAAkAAAAFABcAAAACAAkAAAAGABcAAAACAAkAAAAHABcAAAACAAkAAAAIABcAAAACAAkAAAAJABcAAAACAAkAAAAKABcAAAACAAkAAAALABcAAAACAAkAAAAMABcAAAACAAkAAAANABcAAAACAAkAAAAOABcAAAACAAkAAAAPABcAAAACAAkAAAAQABcAAAACAAkAAAARABcAAAACAAkAAAASABcAAAACAAkAAAATABcAAAACAAkAAAAUABcAAAACAAkAAAAVABcAAAACAAkAAAAWABcAAAACAAkAAAAXABcAAAACAAkAAAAYABcAAAACAAkAAAAZABcAAAACAAkAAAAaABcAAAACAAkAAAAbABcAAAACAAkAAAAcABcAAAACAAkAAAAdABcAAAACAAkAAAAeABcAAAACAAkAAAAfABcAAAACAAkAAAAgABcAAAACAAkAAAAhABcAAAACAAkAAAAiABcAAAACAAkAAAAjABcAAAACAAkAAAAkABcAAAACAAkAAAAlABcAAAACAAkAAAAmABcAAAACAAkAAAAnABcAAAACAAkAAAAnABYAAAACAAkAAAAmABYAAAACAAkAAAAlABYAAAACAAkAAAAkABYAAAACAAkAAAAjABYAAAACAAkAAAAiABYAAAACAAkAAAAhABYAAAACAAkAAAAgABYAAAACAAkAAAAfABYAAAACAAkAAAAeABYAAAACAAkAAAAdABYAAAACAAkAAAAcABYAAAACAAkAAAAbABYAAAACAAkAAAAaABYAAAACAAkAAAAZABYAAAACAAkAAAAYABYAAAACAAkAAAAXABYAAAACAAkAAAAWABYAAAACAAkAAAAVABYAAAACAAkAAAAUABYAAAACAAkAAAATABYAAAACAAkAAAASABYAAAACAAkAAAARABYAAAACAAkAAAAQABYAAAACAAkAAAAPABYAAAACAAkAAAAOABYAAAACAAkAAAANABYAAAACAAkAAAAMABYAAAACAAkAAAALABYAAAACAAkAAAAKABYAAAACAAkAAAAJABYAAAACAAkAAAAIABYAAAACAAkAAAAHABYAAAACAAkAAAAGABYAAAACAAkAAAAFABYAAAACAAkAAAAmABAAAAACAAkAAAAmAA8AAAACAAkAAAAmAA4AAAACAAkAAAAmAA0AAAACAAkAAAAnAA0AAAACAAkAAAAnAAwAAAACAAkAAAAnAA4AAAACAAkAAAAnAA8AAAACAAkAAAAnABAAAAACAAkAAAAmAAwAAAACAAkAAAAmAAsAAAACAAkAAAAmAAoAAAACAAkAAAAmAAkAAAACAAkAAAAmAAgAAAACAAkAAAAmAAcAAAACAAkAAAAmAAYAAAACAAkAAAAmAAUAAAACAAkAAAAmAAQAAAACAAkAAAAmAAMAAAACAAkAAAAmAAIAAAACAAkAAAAmAAEAAAACAAkAAAAnAAEAAAACAAkAAAAnAAIAAAACAAkAAAAnAAMAAAACAAkAAAAnAAQAAAACAAkAAAAnAAUAAAACAAkAAAAnAAYAAAACAAkAAAAnAAcAAAACAAkAAAAnAAgAAAACAAkAAAAnAAkAAAACAAkAAAAnAAoAAAACAAkAAAAnAAsAAAACAAkAAAAlAAIAAAACAAkAAAAlAAEAAAACAAkAAAAkAAEAAAACAAkAAAAkAAIAAAACAAkAAAAjAAIAAAACAAkAAAAiAAIAAAACAAkAAAAhAAIAAAACAAkAAAAgAAIAAAACAAkAAAAfAAIAAAACAAkAAAAeAAIAAAACAAkAAAAdAAIAAAACAAkAAAAcAAIAAAACAAkAAAAbAAIAAAACAAkAAAAaAAIAAAACAAkAAAAZAAIAAAACAAkAAAAYAAIAAAACAAkAAAAXAAIAAAACAAkAAAAWAAIAAAACAAkAAAASAAIAAAACAAkAAAARAAIAAAACAAkAAAAQAAIAAAACAAkAAAAPAAIAAAACAAkAAAAOAAIAAAACAAkAAAANAAIAAAACAAkAAAAMAAIAAAACAAkAAAALAAIAAAACAAkAAAAKAAIAAAACAAkAAAAJAAIAAAACAAkAAAAIAAIAAAACAAkAAAAHAAIAAAACAAkAAAAGAAIAAAACAAkAAAAEAAIAAAACAAkAAAAFAAIAAAACAAkAAAADAAMAAAACAAkAAAACAAEAAAACAAkAAAADAAEAAAACAAkAAAAEAAEAAAACAAkAAAAFAAEAAAACAAkAAAAGAAEAAAACAAkAAAAIAAEAAAACAAkAAAAJAAEAAAACAAkAAAAKAAEAAAACAAkAAAALAAEAAAACAAkAAAAMAAEAAAACAAkAAAANAAEAAAACAAkAAAAHAAEAAAACAAkAAAAOAAEAAAACAAkAAAAPAAEAAAACAAkAAAAQAAEAAAACAAkAAAARAAEAAAACAAkAAAASAAEAAAACAAkAAAAWAAEAAAACAAkAAAAXAAEAAAACAAkAAAAYAAEAAAACAAkAAAAZAAEAAAACAAkAAAAaAAEAAAACAAkAAAAbAAEAAAACAAkAAAAcAAEAAAACAAkAAAAdAAEAAAACAAkAAAAeAAEAAAACAAkAAAAfAAEAAAACAAkAAAAgAAEAAAACAAkAAAAhAAEAAAACAAkAAAAiAAEAAAACAAkAAAAjAAEAAAACAAkAAAAoABYAAAACAAkAAAAoABcAAAACAAkAAAApABcAAAACAAkAAAAqABcAAAACAAkAAAArABcAAAACAAkAAAArABYAAAACAAkAAAAsABYAAAACAAkAAAAtABYAAAACAAkAAAAtABcAAAACAAkAAAAsABcAAAACAAkAAAAqABYAAAACAAkAAAApABYAAAACAAkAAAAoABAAAAACAAkAAAApABAAAAACAAkAAAAqABAAAAACAAkAAAArABAAAAACAAkAAAAsABAAAAACAAkAAAAtABAAAAACAAkAAAAuABAAAAACAAkAAAAvABAAAAACAAkAAAAvABEAAAACAAkAAAAvABIAAAACAAkAAAAvABMAAAACAAkAAAAvABQAAAACAAkAAAAvABUAAAACAAkAAAAvABYAAAACAAkAAAAvABcAAAACAAkAAAAuABcAAAACAAkAAAAuABYAAAACAAkAAAASAAMAAAACAAkAAAARAAMAAAACAAkAAAAQAAMAAAACAAkAAAAPAAMAAAACAAkAAAAOAAMAAAACAAkAAAANAAMAAAACAAkAAAAMAAMAAAACAAkAAAALAAMAAAACAAkAAAAKAAMAAAACAAkAAAAJAAMAAAACAAkAAAAIAAMAAAACAAkAAAAHAAMAAAACAAkAAAAGAAMAAAACAAkAAAAFAAMAAAACAAkAAAAEAAMAAAACAAkAAAAEAAQAAAACAAkAAAAEAAUAAAACAAkAAAAEAAYAAAACAAkAAAAEAAcAAAACAAkAAAAEAAgAAAACAAkAAAAEAAkAAAACAAkAAAAEAAoAAAACAAkAAAAEAAsAAAACAAkAAAAEAAwAAAACAAkAAAAEAA0AAAACAAkAAAAEAA4AAAACAAkAAAAEAA8AAAACAAkAAAAEABAAAAACAAkAAAAEABEAAAACAAkAAAAEABIAAAACAAkAAAAEABMAAAACAAkAAAAEABQAAAACAAkAAAAEABUAAAACAAkAAAAFABUAAAACAAkAAAAGABUAAAACAAkAAAAHABUAAAACAAkAAAAIABUAAAACAAkAAAAJABUAAAACAAkAAAAKABUAAAACAAkAAAALABUAAAACAAkAAAAMABUAAAACAAkAAAANABUAAAACAAkAAAAOABUAAAACAAkAAAAPABUAAAACAAkAAAAQABUAAAACAAkAAAARABUAAAACAAkAAAASABUAAAACAAkAAAATABUAAAACAAkAAAAUABUAAAACAAkAAAAVABUAAAACAAkAAAAWABUAAAACAAkAAAAXABUAAAACAAkAAAAYABUAAAACAAkAAAAZABUAAAACAAkAAAAaABUAAAACAAkAAAAbABUAAAACAAkAAAAcABUAAAACAAkAAAAdABUAAAACAAkAAAAeABUAAAACAAkAAAAfABUAAAACAAkAAAAgABUAAAACAAkAAAAhABUAAAACAAkAAAAiABUAAAACAAkAAAAjABUAAAACAAkAAAAkABUAAAACAAkAAAAlABUAAAACAAkAAAAmABUAAAACAAkAAAAnABUAAAACAAkAAAAoABUAAAACAAkAAAApABUAAAACAAkAAAAqABUAAAACAAkAAAArABUAAAACAAkAAAAsABUAAAACAAkAAAAtABUAAAACAAkAAAAuABUAAAACAAkAAAAlABAAAAACAAkAAAAlAA8AAAACAAkAAAAlAA4AAAACAAkAAAAlAA0AAAACAAkAAAAlAAwAAAACAAkAAAAlAAsAAAACAAkAAAAlAAoAAAACAAkAAAAlAAkAAAACAAkAAAAlAAgAAAACAAkAAAAlAAcAAAACAAkAAAAlAAYAAAACAAkAAAAlAAUAAAACAAkAAAAlAAQAAAACAAkAAAAlAAMAAAACAAkAAAAkAAMAAAACAAkAAAAjAAMAAAACAAkAAAAiAAMAAAACAAkAAAAhAAMAAAACAAkAAAAgAAMAAAACAAkAAAAfAAMAAAACAAkAAAAeAAMAAAACAAkAAAAdAAMAAAACAAkAAAAcAAMAAAACAAkAAAAbAAMAAAACAAkAAAAaAAMAAAACAAkAAAAZAAMAAAACAAkAAAAYAAMAAAACAAkAAAAXAAMAAAACAAkAAAAWAAMAAAACAAkAAAASAAQAAAACAAkAAAARAAQAAAACAAkAAAAQAAQAAAACAAkAAAAPAAQAAAACAAkAAAAOAAQAAAACAAkAAAANAAQAAAACAAkAAAAMAAQAAAACAAkAAAALAAQAAAACAAkAAAAKAAQAAAACAAkAAAAJAAQAAAACAAkAAAAIAAQAAAACAAkAAAAHAAQAAAACAAkAAAAGAAQAAAACAAkAAAAFAAQAAAACAAkAAAAFAAUAAAACAAkAAAAFAAYAAAACAAkAAAAFAAcAAAACAAkAAAAFAAgAAAACAAkAAAAFAAkAAAACAAkAAAAFAAoAAAACAAkAAAAFAAsAAAACAAkAAAAFAAwAAAACAAkAAAAFAA0AAAACAAkAAAAFAA4AAAACAAkAAAAFAA8AAAACAAkAAAAFABAAAAACAAkAAAAFABEAAAACAAkAAAAFABIAAAACAAkAAAAFABMAAAACAAkAAAAFABQAAAACAAkAAAAGABQAAAACAAkAAAAHABQAAAACAAkAAAAIABQAAAACAAkAAAAJABQAAAACAAkAAAAKABQAAAACAAkAAAALABQAAAACAAkAAAAMABQAAAACAAkAAAANABQAAAACAAkAAAAOABQAAAACAAkAAAAPABQAAAACAAkAAAAQABQAAAACAAkAAAARABQAAAACAAkAAAASABQAAAACAAkAAAATABQAAAACAAkAAAAUABQAAAACAAkAAAAVABQAAAACAAkAAAAWABQAAAACAAkAAAAXABQAAAACAAkAAAAYABQAAAACAAkAAAAZABQAAAACAAkAAAAaABQAAAACAAkAAAAbABQAAAACAAkAAAAcABQAAAACAAkAAAAdABQAAAACAAkAAAAeABQAAAACAAkAAAAfABQAAAACAAkAAAAgABQAAAACAAkAAAAhABQAAAACAAkAAAAiABQAAAACAAkAAAAjABQAAAACAAkAAAAkABQAAAACAAkAAAAlABQAAAACAAkAAAAmABQAAAACAAkAAAAnABQAAAACAAkAAAAoABQAAAACAAkAAAAtABQAAAACAAkAAAAuABQAAAACAAkAAAAsABQAAAACAAkAAAArABQAAAACAAkAAAAqABQAAAACAAkAAAApABQAAAACAAkAAAAkABAAAAACAAkAAAAkAA8AAAACAAkAAAAkAA4AAAACAAkAAAAkAA0AAAACAAkAAAAkAAwAAAACAAkAAAAkAAsAAAACAAkAAAAkAAoAAAACAAkAAAAkAAkAAAACAAkAAAAkAAgAAAACAAkAAAAkAAcAAAACAAkAAAAkAAYAAAACAAkAAAAkAAUAAAACAAkAAAAkAAQAAAACAAkAAAAjAAQAAAACAAkAAAAiAAQAAAACAAkAAAAhAAQAAAACAAkAAAAgAAQAAAACAAkAAAAfAAQAAAACAAkAAAAeAAQAAAACAAkAAAAdAAQAAAACAAkAAAAcAAQAAAACAAkAAAAbAAQAAAACAAkAAAAaAAQAAAACAAkAAAAZAAQAAAACAAkAAAAYAAQAAAACAAkAAAAXAAQAAAACAAkAAAAWAAQAAAACAAkAAAASAAUAAAACAAkAAAARAAUAAAACAAkAAAAQAAUAAAACAAkAAAAPAAUAAAACAAkAAAAOAAUAAAACAAkAAAANAAUAAAACAAkAAAAMAAUAAAACAAkAAAALAAUAAAACAAkAAAAKAAUAAAACAAkAAAAJAAUAAAACAAkAAAAIAAUAAAACAAkAAAAHAAUAAAACAAkAAAAGAAUAAAACAAkAAAAGAAYAAAACAAkAAAAGAAcAAAACAAkAAAAGAAgAAAACAAkAAAAGAAkAAAACAAkAAAAGAAoAAAACAAkAAAAGAAsAAAACAAkAAAAGAAwAAAACAAkAAAAGAA0AAAACAAkAAAAGAA4AAAACAAkAAAAGAA8AAAACAAkAAAAGABAAAAACAAkAAAAGABEAAAACAAkAAAAGABIAAAACAAkAAAAGABMAAAACAAkAAAAHABMAAAACAAkAAAAIABMAAAACAAkAAAAJABMAAAACAAkAAAAKABMAAAACAAkAAAALABMAAAACAAkAAAAMABMAAAACAAkAAAANABMAAAACAAkAAAAOABMAAAACAAkAAAAPABMAAAACAAkAAAAQABMAAAACAAkAAAARABMAAAACAAkAAAASABMAAAACAAkAAAATABMAAAACAAkAAAAUABMAAAACAAkAAAAVABMAAAACAAkAAAAWABMAAAACAAkAAAAYABMAAAACAAkAAAAZABMAAAACAAkAAAAaABMAAAACAAkAAAAXABMAAAACAAkAAAAbABMAAAACAAkAAAAcABMAAAACAAkAAAAdABMAAAACAAkAAAAeABMAAAACAAkAAAAfABMAAAACAAkAAAAgABMAAAACAAkAAAAhABMAAAACAAkAAAAiABMAAAACAAkAAAAjABMAAAACAAkAAAAjABAAAAACAAkAAAAjAA8AAAACAAkAAAAjAA4AAAACAAkAAAAjAA0AAAACAAkAAAAjAAwAAAACAAkAAAAjAAsAAAACAAkAAAAjAAoAAAACAAkAAAAjAAkAAAACAAkAAAAjAAgAAAACAAkAAAAjAAcAAAACAAkAAAAjAAYAAAACAAkAAAAjAAUAAAACAAkAAAAiAAUAAAACAAkAAAAhAAUAAAACAAkAAAAgAAUAAAACAAkAAAAfAAUAAAACAAkAAAAeAAUAAAACAAkAAAAdAAUAAAACAAkAAAAcAAUAAAACAAkAAAAbAAUAAAACAAkAAAAaAAUAAAACAAkAAAAZAAUAAAACAAkAAAAYAAUAAAACAAkAAAAXAAUAAAACAAkAAAAWAAUAAAACAAkAAAAkABMAAAACAAkAAAAlABMAAAACAAkAAAAmABMAAAACAAkAAAAnABMAAAACAAkAAAAoABMAAAACAAkAAAApABMAAAACAAkAAAAqABMAAAACAAkAAAArABMAAAACAAkAAAAsABMAAAACAAkAAAAtABMAAAACAAkAAAAuABMAAAACAAkAAAAhABAAAAACAAkAAAAiABAAAAACAAkAAAAiAA8AAAACAAkAAAAhAA8AAAACAAkAAAAhAA4AAAACAAkAAAAhAA0AAAACAAkAAAAhAAwAAAACAAkAAAAiAAwAAAACAAkAAAAiAAsAAAACAAkAAAAiAA0AAAACAAkAAAAiAA4AAAACAAkAAAAiAAoAAAACAAkAAAAhAAoAAAACAAkAAAAhAAsAAAACAAkAAAAhAAkAAAACAAkAAAAhAAgAAAACAAkAAAAhAAcAAAACAAkAAAAhAAYAAAACAAkAAAAiAAYAAAACAAkAAAAiAAcAAAACAAkAAAAiAAgAAAACAAkAAAAiAAkAAAACAAkAAAAIAAYAAAACAAkAAAAHAAYAAAACAAkAAAAHAAcAAAACAAkAAAAIAAcAAAACAAkAAAAIAAgAAAACAAkAAAAHAAgAAAACAAkAAAAHAAkAAAACAAkAAAAIAAkAAAACAAkAAAAIAAoAAAACAAkAAAAHAAoAAAACAAkAAAAHAAsAAAACAAkAAAAHAAwAAAACAAkAAAAIAAwAAAACAAkAAAAIAAsAAAACAAkAAAAIAA0AAAACAAkAAAAIAA4AAAACAAkAAAAHAA4AAAACAAkAAAAHAA8AAAACAAkAAAAHABAAAAACAAkAAAAHABEAAAACAAkAAAAIABIAAAACAAkAAAAIABEAAAACAAkAAAAIABAAAAACAAkAAAAIAA8AAAACAAkAAAAHABIAAAACAAkAAAAHAA0AAAACAAkAAAA=")
tile_set = SubResource("TileSet_nfa7k")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(1307, -21)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1340, 798)
zoom = Vector2(0.75, 0.75)

[node name="CloseDoor" type="Area2D" parent="."]
position = Vector2(-11, 196)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseDoor"]
position = Vector2(1213, 226)
shape = SubResource("SegmentShape2D_nfa7k")

[node name="ToGuildCamp" type="Area2D" parent="."]
position = Vector2(2193, 1298)
rotation = -1.54813

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToGuildCamp"]
position = Vector2(36, 37)
shape = SubResource("SegmentShape2D_nfa7k")

[node name="Cyclops" type="Sprite2D" parent="."]
position = Vector2(1701, 917)
scale = Vector2(0.306906, 0.306906)
texture = ExtResource("3_i70v6")

[connection signal="body_exited" from="CloseDoor" to="." method="_on_close_door_body_exited"]
[connection signal="body_entered" from="ToGuildCamp" to="." method="_on_to_guild_camp_body_entered"]
